Fix form on mobile device?

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -101,12 +101,13 @@ input:checked {
    }
  }
  ~ .tab-content {
-   max-height: 100vh;
+   max-height: 100%;
    padding: 1rem;
    display: flex;
  }
 }
 form {
+  max-width: 100%;
 
 /*     #close-btn{
       border: none;
